# todo-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  backend.rs  calendar.rs  config.rs  events.rs  main.rs  models.rs  ui.rs
